fix : z-index

--- a/eclass-reto/my-vue-app/src/01-rickandmorty/styles/components/ui/characterCard.module.css
+++ b/eclass-reto/my-vue-app/src/01-rickandmorty/styles/components/ui/characterCard.module.css
@@ -22,6 +22,7 @@
   top: 10px;
   right: 10px;
   text-align: center;
+  z-index: 9;
 }
 
 .add_favorite_icon_not_active{
